syntax = "proto3";
import "google/protobuf/empty.proto";
package sessionpb;

option go_package = "github.com/ladzaretti/vlt-cli/vaultdaemon/proto/sessionpb";

// Session provides login/logout and session 
// state operations for vault cipher data.
service Session {
  // Login saves cipher data for a vault path.
  rpc Login (LoginRequest) returns (google.protobuf.Empty);

  // GetSessionKey retrieves cipher data for a vault path.
  rpc GetSessionKey (SessionRequest) returns (VaultKey);

  // UpdateSession updates the stored session nonce for a vault path.
  rpc UpdateSession (UpdateRequest) returns (google.protobuf.Empty);

  // Logout clears stored cipher data for a vault path.
  rpc Logout (SessionRequest) returns (google.protobuf.Empty);
}

// SessionData holds AES-GCM key and nonce for decrypting vault data.
message VaultKey {
  bytes key = 1;   // AES-GCM key
  bytes nonce = 2; // AES-GCM nonce
}

// LoginRequest is used to initiate a session.
message LoginRequest {
  string vault_path = 1;
  int64 duration_seconds = 2; 
  VaultKey vault_key = 3;
}

// SessionRequest identifies a vault session by path.
message SessionRequest {
  string vault_path = 1;
}

// UpdateRequest updates the nonce for an existing vault session.
message UpdateRequest {
  string vault_path = 1;
  bytes nonce = 2; // AES-GCM nonce
}